--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+#spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.servlet.multipart.max-file-size=100 MB
 spring.servlet.multipart.max-request-size=100 MB
 
