--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.17'
+	id 'org.springframework.boot' version '3.2.5' // java ver 21에 맞게 업그레이드 기존 2.7.17에서 --09/12
 	id 'io.spring.dependency-management' version '1.1.5'
 //	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'com.bridge'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
-targetCompatibility = '17'
+sourceCompatibility = '21'
+targetCompatibility = '21'
 
 configurations {
 	compileOnly {
@@ -24,25 +24,25 @@ repositories {
 
 dependencies {
 	// Spring Boot Starters
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis' //이메일 인증코드 관련 저장소.
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	
 	
 	// Mybatis, Lombok, MySQL
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'// java ver 21에 맞게 버전 업그레이드 --09/12
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	// Logging
-	implementation group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16'
+	// implementation group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16'
+	implementation 'net.ttddyy:datasource-proxy:1.10' //(log4jdbc 대신 최신화 가능) -java 21 ver
 	
 	// https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
@@ -55,7 +55,8 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	
 	// Swagger/OpenAPI
-	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0' 
+	// implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
