--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -6,5 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG     # SQL \uAD6C\uBB38 \uB85C\uADF8
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE  # \uBC14\uC778\uB529 \uBCC0\uC218 \uCD9C\uB825
+logging.level.org.hibernate.SQL=DEBUG 
+# SQL \uAD6C\uBB38 \uB85C\uADF8
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE  
+# \uBC14\uC778\uB529 \uBCC0\uC218 \uCD9C\uB825
