--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.hikari.connection-test-query=select 1
 
 # JPA set
 spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect -- Spring Boot 3.x / Hibernate 6.x부터는 MySQL5InnoDBDialect가 제거되었기 때문에 아래로 수정 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 #spring.mvc.pathmatch.matching-strategy=ant-path-matcher
