--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,10 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
+# File upload dir
+file.upload-dir=C:/Users/조아라/files/
+
+
 # Redis set
 spring.redis.host=localhost
 spring.redis.port=6379
