--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,3 +10,6 @@ logging.level.org.hibernate.SQL=DEBUG
 # SQL \uAD6C\uBB38 \uB85C\uADF8
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE  
 # \uBC14\uC778\uB529 \uBCC0\uC218 \uCD9C\uB825
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
