docker set -ing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
 #spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
+
+#spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
+spring.datasource.hikari.jdbc-url=jdbc:mysql://host.docker.internal:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
+
 #spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://192.168.0.47:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=root
@@ -30,11 +33,14 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 # File upload dir
-file.upload-dir=C:/Users/조아라/files/
+#file.upload-dir=C:/Users/조아라/files/
+file.upload-dir=/app/files/
 
 
 # Redis set
-spring.redis.host=localhost
+#spring.redis.host=localhost
+#spring.redis.port=6379
+spring.redis.host=host.docker.internal
 spring.redis.port=6379
 
 # Email set 
