--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
 
 #spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
-spring.datasource.hikari.jdbc-url=jdbc:mysql://host.docker.internal:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
+#spring.datasource.hikari.jdbc-url=jdbc:mysql://host.docker.internal:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
+spring.datasource.hikari.jdbc-url=jdbc:mysql://mysql:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
 
 #spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://192.168.0.47:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
 spring.datasource.hikari.username=root
