--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,13 @@ spring.datasource.hikari.username=root
 spring.datasource.hikari.password=root
 spring.datasource.hikari.connection-test-query=select 1
 
+# ✅ 추가 (연결 재시도 관련 설정)
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.max-lifetime=1800000
+
 # JPA set
 spring.jpa.database=mysql
 # spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect -- Spring Boot 3.x / Hibernate 6.x부터는 MySQL5InnoDBDialect가 제거되었기 때문에 아래로 수정 
