--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: musicdb
-      MYSQL_USER: root
+#      MYSQL_USER: root
       MYSQL_PASSWORD: root
     ports:
       - "3306:3306"
