// mysql docker connect set edit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,9 @@ spring.datasource.hikari.username=root
 spring.datasource.hikari.password=root
 spring.datasource.hikari.connection-test-query=select 1
 
-# ✅ 추가 (연결 재시도 관련 설정)
-spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=10000
-spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.minimum-idle=1
 
 # JPA set
 spring.jpa.database=mysql
@@ -45,7 +42,7 @@ spring.servlet.multipart.max-request-size=100MB
 file.upload-dir=/app/files/
 
 
-# Redis set
+# Redis set (컨테이너 내에서 host.docker.internal로 로컬 접근할 경우만 해당)
 #spring.redis.host=localhost
 #spring.redis.port=6379
 spring.redis.host=host.docker.internal
