--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 
 services:
   mysql:
@@ -7,22 +6,29 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: musicdb
-#      MYSQL_USER: root
-      MYSQL_PASSWORD: root
     ports:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   bridge-app:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     container_name: bridge-app
     ports:
       - "8080:8080"
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
+    restart: on-failure        # ❗ depends_on과 같은 레벨이어야 함
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/musicdb
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
     volumes:
