--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,55 @@
 
 services:
   mysql:
-    image: mysql:8.0
-    container_name: bridge-mysql
+    image: mysql:5.7
+    container_name: mysql-container
+    restart: always
+    ports:
+      - "4406:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: musicdb
-    ports:
-      - "3306:3306"
     volumes:
-      - mysql-data:/var/lib/mysql
+      - ./mysql/init:/docker-entrypoint-initdb.d
+      - mysql_data:/var/lib/mysql
+    networks:
+      - backend
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  bridge-app:
-    build: 
+  redis:
+    image: redis:alpine
+    container_name: redis-container
+    restart: always
+    ports:
+      - "6379:6379"
+    networks:
+      - backend
+
+  springboot:
+    build:
       context: .
       dockerfile: Dockerfile
-    container_name: bridge-app
+    container_name: springboot-container
     ports:
       - "8080:8080"
     depends_on:
       mysql:
         condition: service_healthy
-    restart: on-failure        # ❗ depends_on과 같은 레벨이어야 함
+      redis:
+        condition: service_started
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/musicdb
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
-    volumes:
-      - ./files:/app/files
+    networks:
+      - backend
 
 volumes:
-  mysql-data:
+  mysql_data:
+
+networks:
+  backend:   # ✅ 이 부분 반드시 있어야 함!!
