--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
 #spring.datasource.hikari.jdbc-url=jdbc:mysql://host.docker.internal:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
+#spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:4406/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
 spring.datasource.hikari.jdbc-url=jdbc:mysql://mysql:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
 
 #spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://192.168.0.47:3306/musicdb?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
@@ -43,10 +44,10 @@ file.upload-dir=/app/files/
 
 
 # Redis set (컨테이너 내에서 host.docker.internal로 로컬 접근할 경우만 해당)
-#spring.redis.host=localhost
-#spring.redis.port=6379
-spring.redis.host=host.docker.internal
+spring.redis.host=redis
 spring.redis.port=6379
+#spring.redis.host=host.docker.internal
+#spring.redis.port=6379
 
 # Email set 
 spring.config.import=classpath:email.properties
