// upload path > docker기반으로 다시 set : 기존의 로컬경로에서 docker경로로 - 크게 공통이미지/공통 음악파일/jam/spleeter 로 구분지어서

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/musicdb
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
+    volumes:
+      - ./files:/app/files
     networks:
       - backend
 
