--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,8 +39,19 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 # File upload dir
-#file.upload-dir=C:/Users/조아라/files/
-file.upload-dir=/app/files/
+#file.upload-dir=C:/Users/조아라/files/ -- 도커 연결 전 하드코딩된 로컬 경로
+# 공통 이미지 경로
+upload.dir.images=/app/files/images/
+
+# 공통 베이스 경로 mp3 조회용
+upload.dir.base=/app/files/
+
+# Jam 기능
+upload.dir.jam=/app/files/jam/
+
+# Spleeter (음원 분리용)
+upload.dir.spleeter.input=/app/files/music/
+upload.dir.spleeter.output=/app/files/output/
 
 
 # Redis set (컨테이너 내에서 host.docker.internal로 로컬 접근할 경우만 해당)
