--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ java {
         languageVersion = JavaLanguageVersion.of(21)
     }
 }
-
+// ↓ 추가 application.properties 파일이 잡히지 않아서 자꾸 오류났었음
 sourceSets {
     main {
         java {
