--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,17 +45,18 @@ upload.dir.images=/app/files/images/
 
 # 공통 베이스 경로 mp3 조회용
 upload.dir.base=/app/files/
-
+upload.dir.music=/app/files/cmn/
 # Jam 기능
 upload.dir.jam=/app/files/jam/
 
 # Spleeter (음원 분리용)
-upload.dir.spleeter.input=/app/files/music/
-upload.dir.spleeter.output=/app/files/output/
+upload.dir.spleeter.input=/app/files/spleeter/input/
+upload.dir.spleeter.output=/app/files/spleeter/output/
 
 
 # Redis set (컨테이너 내에서 host.docker.internal로 로컬 접근할 경우만 해당)
 spring.redis.host=redis
+#spring.redis.host=redis
 spring.redis.port=6379
 #spring.redis.host=host.docker.internal
 #spring.redis.port=6379
